--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
+  "name": "barbershop",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsx watch backend/src/app.ts"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.2",
-    "tsx": "^4.6.2"
+    "mongoose": "^7.5.1",
+    "tsx": "^3.12.10",
+    "typescript": "^5.3.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.6.2",
+    "ts-node": "^10.9.1"
   }
 }
