--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^7.5.1",
     "tsx": "^3.12.10",
     "typescript": "^5.3.2"
