--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsx watch backend/src/app.ts"
+    "start": "tsx watch ./src/app.ts"
   },
   "author": "",
   "license": "ISC",
