--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "nodemailer": "^6.9.8",
     "tsx": "^3.12.10",
     "typescript": "^5.3.2"
   },
