--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "nodemailer": "^6.9.8",
+    "resend": "^3.1.0",
     "tsx": "^3.12.10",
     "typescript": "^5.3.2"
   },
