--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongodb": "^4.0.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "node": "^21.7.1",
     "nodemailer": "^6.9.8",
     "resend": "^3.1.0",
     "tsx": "^3.12.10",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.2",
+    "kill-port": "^2.0.1",
     "ts-node": "^10.9.1"
   }
 }
