--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.1.0",
-    "node": "^21.7.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
+    "openai": "^4.42.0",
     "resend": "^3.1.0",
     "tsx": "^3.12.10",
     "typescript": "^5.3.2"
